# diffusion

./: .gitignore  pyproject.toml
notebooks/: train_uc_lfmm.py  train_uc_pfmm.py
src/diffusion/: __init__.py  samplers.py  train.py
src/diffusion/models/: __init__.py  latent_flow_matching_2d.py  latent_flow_matching_2d_base.py  pixel_flow_matching_2d.py  spatial_diffusion.py
src/diffusion/modules/: __init__.py  embeddings.py  projection.py
src/diffusion/modules/diffusion/samplers/: cache.py
src/diffusion/modules/samplers/: flow_matching.py
