[project]
name = "diffusion"
version = "0.1.0"
description = "Basic diffusion model training and sampling"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "einops>=0.7.0",
    "mura @ file://../mura",
    "metrics-core @ file://../metrics-core",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
